@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-29T01:02:22Z",
+  "timestamp" : "2022-06-29T08:16:36Z",
   "count_outdated" : 365,
   "uniques_outdated" : 197,
   "count" : 387,
-  "uniques" : 210,
+  "uniques" : 211,
   "clones" : [
     {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
